Update typewriter-effect's cdn url

--- a/data/lib.toml
+++ b/data/lib.toml
@@ -59,8 +59,8 @@
   url = "https://cdn.jsdelivr.net/npm/viz.js@2.1.2/full.render.js"
 
 [js.typewriter]
-  sri = "sha256-dsvC/UolMujQ/UQ7lVeJ7Q/FV3BSzWO0rc8iz1rqHQo="
-  url = "https://cdn.jsdelivr.net/npm/typewriter-effect@2.13.1/dist/core.js"
+  sri = "sha256-TitFDAuVGXWTqg0oaoFr2A8Ai8vF1uaslKaTkL74mGk="
+  url = "https://unpkg.com/typewriter-effect@2.21.0/dist/react.js"
 
 
 
